test/corpus/fail/issue-3585b.mo
=========
issue-3585b.mo
=========

import O = "issue-3585/Object";

actor {
}

---

(source_file
  (import
    (var_pat
      (identifier))
    (text_literal))
  (obj_dec
    (obj_sort)
    (obj_body)))
